ajout du logo orinonco dans le dossier images

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Orinoco</title>
 </head>
 <body>
     <header>
         <a href="index.html">
-            <img class="logo" src="../images/logo.png" alt="logo orinoco">
+            <img class="logo" src="images/logo.png" alt="logo orinoco">
         </a>
         <nav>
             <a class="menu" href="index.html">Accueil</a>
@@ -25,7 +25,7 @@
     <footer>
         <a class="contact" href="mailto:orinoco@contact.fr">Contact</a>
     </footer>
-    <script src="../js/index.js"></script>
+    <script src="index.js"></script>
     
 </body>
 </html>
