--- a/produit.html
+++ b/produit.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Orinoco</title>
 </head>
 <body>
     <header>
         <a href="index.html">
-            <img class="logo" src="../images/logo.png" alt="logo orinoco">
+            <img class="logo" src="images/logo.png" alt="logo orinoco">
         </a>
         <nav>
             <a href="index.html">Accueil</a>
