--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img class="logo" src="images/logo.png" alt="logo orinoco">
+            <img class="logo" src="../images/logo.png" alt="logo orinoco">
         </a>
         <nav>
             <a class="menu" href="index.html">Accueil</a>
