modification de la src du logo pour les fichier html

--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img class="logo" src="images/logo.png" alt="logo orinoco">
+            <img class="logo" src="../images/logo.png" alt="logo orinoco">
         </a>
         <nav>
             <a href="index.html">Accueil</a>
