--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -12,13 +12,13 @@
             <img class="logo" src="../images/logo.png" alt="logo orinoco">
         </a>
         <nav>
-            <a href="index.html">Accueil</a>
-            <a href="panier.html">Panier</a>
+           <a href="panier.html">Panier</a>
         </nav>
     </header>
-
+        <div id="principal"></div>
     <footer>
         <a href="mailto:orinoco@contact.fr">Contact</a>
     </footer>
+    <script src="../js/confirmation.js"></script>
 </body>
 </html>
