--- a/html/panier.html
+++ b/html/panier.html
@@ -12,20 +12,22 @@
             <img class="logo" src="../images/logo.png" alt="logo orinoco">
         </a>
         <nav>
-            <a href="index.html">Accueil</a>
-            <a href="panier.html">Panier</a>
+           <a href="panier.html">Panier</a>
         </nav>
     </header>
-    <form id="form">
-        <label for="prenom"><input type="text" id="prenom" placeholder="Votre Prénom" /></label>
-        <label for="nom"><input type="text" id="nom" placeholder="Votre Nom" /></label>
-        <label for="adresse"><input type="text" id="addresse" placeholder="Votre Adresse" /></label>
-        <label for="ville"><input type="text" id="ville" placeholder="Votre Ville" /></label>
-        <label for="email"><input type="email" id="mail" placeholder="Votre Email" /></label>
-        <button id="button" type="button">Commander</button>
+
+    <div class="main"></div>
+    <form id="form" action="confirmation.html" method="POST">
+        <label for="prenom"><input type="text" id="prenom" placeholder="Votre Prénom"/></label>
+        <label for="nom"><input type="text" id="nom" placeholder="Votre Nom"/></label>
+        <label for="adresse"><input type="text" id="addresse" placeholder="Votre Adresse"/></label>
+        <label for="ville"><input type="text" id="ville" placeholder="Votre Ville"/></label>
+        <label for="email"><input type="email" id="mail" placeholder="Votre Email"/></label>
+        <button id="button" type="submit">Commander</button>
       </form>
     <footer>
         <a href="mailto:orinoco@contact.fr">Contact</a>
     </footer>
+    <script src="../js/panier.js"></script>
 </body>
 </html>
