--- a/html/produit.html
+++ b/html/produit.html
@@ -12,13 +12,15 @@
             <img class="logo" src="../images/logo.png" alt="logo orinoco">
         </a>
         <nav>
-            <a href="index.html">Accueil</a>
-            <a href="panier.html">Panier</a>
+           <a href="panier.html">Panier</a>
         </nav>
     </header>
+        <div id="leproduit">
 
+        </div>
     <footer>
         <a href="mailto:orinoco@contact.fr">Contact</a>
     </footer>
+    <script src="../js/produit.js"></script>
 </body>
 </html>
