--- a/html/panier.html
+++ b/html/panier.html
@@ -16,7 +16,12 @@
         </nav>
     </header>
 
-    <div class="main"></div>
+    <div class="main">
+        <span id="image"></span><br>
+        <span id="nom"></span><br>
+        <span id="prix"></span><br>
+        <span id="quantite"></span>
+    </div>
     <form id="form" action="confirmation.html" method="POST">
         <label for="prenom"><input type="text" id="prenom" placeholder="Votre Prénom"/></label>
         <label for="nom"><input type="text" id="nom" placeholder="Votre Nom"/></label>
