ajout des variable prixTotal pour calculer la somme total des articles

--- a/html/panier.html
+++ b/html/panier.html
@@ -21,6 +21,7 @@
         <span id="nom"></span><br>
         <span id="prix"></span><br>
         <span id="quantite"></span>
+        <span id="prixTotal"></span>
     </div>
     <form id="form" action="confirmation.html" method="POST">
         <label for="prenom"><input type="text" id="prenom" placeholder="Votre Prénom"/></label>
