ajout de l'image de l'article dans le panier

--- a/html/panier.html
+++ b/html/panier.html
@@ -17,10 +17,10 @@
     </header>
 
     <div class="main">
-        <span id="image"></span><br>
+        <img id="image" src="../images/" alt="image appareil photo"><br>
         <span id="nom"></span><br>
         <span id="prix"></span><br>
-        <span id="quantite"></span>
+        <span id="quantite"></span><br>
         <span id="prixTotal"></span>
     </div>
     <form id="form" action="confirmation.html" method="POST">
