finalisation de la page panier.js et confirmation.js

--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -15,6 +15,7 @@
            <a href="panier.html">Panier</a>
         </nav>
     </header>
+        <h1>Orinonco vous remercie</h1>
         <div id="principal"></div>
     <footer>
         <a href="mailto:orinoco@contact.fr">Contact</a>
