ajout des commentaires et finalisation de l'affichage de la page confirmation.html

--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -15,8 +15,10 @@
            <a href="panier.html">Panier</a>
         </nav>
     </header>
-        <h1>Orinonco vous remercie</h1>
-        <div id="principal"></div>
+        <h1>Orinonco</h1>
+        <div id="principal"> 
+            <h2>vous remercie pour votre commande</h2>
+        </div>
     <footer>
         <a href="mailto:orinoco@contact.fr">Contact</a>
     </footer>
