--- a/html/panier.html
+++ b/html/panier.html
@@ -27,15 +27,15 @@
                 <th>Prix Total</th>
             </tr>
             <tr>
-                <td id="nom"></td>
+                <td id="nomArticle"></td>
                 <td id="prix"></td>
                 <td id="quantite"></td>
                 <td id="prixTotal"></td>
             </tr>
         </table>
     </div>
-    <form id="form" action="confirmation.html" method="POST">
-        <label for="prenom"><input type="text" id="prenom" placeholder="Votre Prénom"/></label>
+    <form id="form">
+        <label for="prenom"><input type="text" id="prenom" placeholder="Votre Prénom"/><span id="prenomManquant"></span></label>
         <label for="nom"><input type="text" id="nom" placeholder="Votre Nom"/></label>
         <label for="adresse"><input type="text" id="addresse" placeholder="Votre Adresse"/></label>
         <label for="ville"><input type="text" id="ville" placeholder="Votre Ville"/></label>
