ajout du CORS dans fetch

--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <title>Orinoco</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
             <img class="logo" src="../images/logo.png" alt="logo orinoco">
         </a>
         <nav>
-           <a href="panier.html">Panier</a>
+            <a href="panier.html">Panier</a>
         </nav>
     </header>
-        <h1>Orinonco</h1>
-        <div id="principal"> 
-            <h2>vous remercie pour votre commande</h2>
-        </div>
+    <h1>Orinoco</h1>
+    <div id="principal">
+        <h2>vous remercie pour votre commande</h2>
+    </div>
     <footer>
         <a href="mailto:orinoco@contact.fr">Contact</a>
     </footer>
     <script src="../js/confirmation.js"></script>
 </body>
+
 </html>
