--- a/html/panier.html
+++ b/html/panier.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <title>Orinoco</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
             <img class="logo" src="../images/logo.png" alt="logo orinoco">
         </a>
         <nav>
-           <a href="panier.html">Panier</a>
+            <a href="panier.html">Panier</a>
         </nav>
     </header>
 
@@ -35,16 +37,17 @@
         </table>
     </div>
     <form id="form">
-        <label for="prenom"><input type="text" id="prenom" placeholder="Votre Prénom"/><span id="prenomManquant"></span></label>
-        <label for="nom"><input type="text" id="nom" placeholder="Votre Nom"/></label>
-        <label for="adresse"><input type="text" id="addresse" placeholder="Votre Adresse"/></label>
-        <label for="ville"><input type="text" id="ville" placeholder="Votre Ville"/></label>
-        <label for="email"><input type="email" id="mail" placeholder="Votre Email"/></label>
+        <label for="prenom"><input type="text" id="prenom" placeholder="Votre Prénom" /></label><span id="choix"></span>
+        <label for="nom"><input type="text" id="nom" placeholder="Votre Nom" /></label>
+        <label for="adresse"><input type="text" id="addresse" placeholder="Votre Adresse" /></label>
+        <label for="ville"><input type="text" id="ville" placeholder="Votre Ville" /></label>
+        <label for="email"><input type="email" id="mail" placeholder="Votre Email" /></label>
         <button id="button" type="submit">Commander</button>
-      </form>
+    </form>
     <footer>
         <a href="mailto:orinoco@contact.fr">Contact</a>
     </footer>
     <script src="../js/panier.js"></script>
 </body>
+
 </html>
